server/pihole/pi_hole_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
        - containerPort: 53
        - containerPort: 443
        volumeMounts:
        - name: pihole-config
          mountPath: /etc/pihole
        - name: dnsmasq-config
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: pihole-config
        persistentVolumeClaim:
          claimName: pihole-pvc
      - name: dnsmasq-config
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-pvc
---
